Kubernetes/udemy_course/resources_eks_course/ingress_demo_2/webserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "webserver-ingress"
  namespace: "2048-game"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: webserver-ingress
spec:
  rules:
    - http:
        paths:
        - path: /frontend
            backend:
              serviceName: "service-frontend"
              servicePort: 80
          - path: /*
            backend:
              serviceName: "service-2048"
              servicePort: 80
          
#Flow: deploy Ingress Controller and IAM Permisions -> Deploy Deployment manifest -> deploy Service manifest -> deploy ingress Resource (which created Application Load Balancer)
#Ingress path ordering matters!
